# quatumica-interview

./: .env.example  .gitignore  AI_LOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py  links.py  redirect.py
app/core/: config.py  database.py  exceptions.py  rate_limit.py
app/models/: __init__.py  link.py
app/repositories/: link_repository.py
app/schemas/: link.py
app/services/: link_service.py
tests/: conftest.py  test_api.py
